@@ -3,13 +3,13 @@ Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
 EBUILD midori-0.1.1.ebuild 2096 RMD160 a60b4d1a7540b3b01127d41611f9524c0d751bef SHA1 e62421f43fd64828bbbed913f120d5ffff106093 SHA256 0e38ea68dfa6b307da4d4218163cf30d54fa888a52bb1353e8a8cff1805f49b8
-EBUILD midori-9999.ebuild 2007 RMD160 f6bcd0a37eba54ac4beddfe8f286a35f28a09295 SHA1 71ef4b4cd86c626f192fed1284e8e0694140f44c SHA256 5772e8542bf68fc32ee14bf2f4e1a2c9ddcdfb7bff317ff28cf1e6a6416a704e
-MISC ChangeLog 1589 RMD160 92609388ac73b5327c41b1ee853f90ad2b599cd8 SHA1 51ffc25f253845cb4b6bccc3f9b26bedaeb53ac6 SHA256 f5476e751360ee13242497c42f92271ba8fc9da6fb47fb13a83f98f8d5b19ad7
+EBUILD midori-9999.ebuild 1896 RMD160 9ba352adb1b9d4c5346f17bc1b17c1144881b6dc SHA1 0d04fbd006ad664fe20e280db520544dbe4b9452 SHA256 22f3f8e7ada1364f0ad0f6254d2645814cc4e43bd9d4194aab412a38df0c7a10
+MISC ChangeLog 1725 RMD160 cbb4c7cb40f513c8a0d1133f84322592306d7740 SHA1 2aa862829b8ff045404b4add1eee7fa066cf594c SHA256 dc5d8598465f710597b29b6dc92a1f04000b5502398f14460958c04e12d41818
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk9IMEACgkQKhnDs22gwa/KcACgqnqH8IUXGmmcI2T+FFAwDWhJ
-9zMAoMh7N1lT2weAttAlI+3lSXYWJ3pw
-=psSK
+iEYEARECAAYFAkk9rR0ACgkQKhnDs22gwa/5YgCg3yIaJLKUWpCvRnKzNnU0OnfC
+ymEAn137KJMTfVEXrFvK3SRRGXIH731D
+=eyTk
 -----END PGP SIGNATURE-----
